--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MediGest – Dashboard do Cuidador</title>
 
-  <!-- Bootstrap + FontAwesome -->
+  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
@@ -14,7 +14,8 @@
   <div class="container d-flex justify-content-center">
     <div style="max-width: 700px; width: 100%;" class="mt-5">
 
-      <!-- Topo: título e botão sair -->
+      
+
       <div class="d-flex justify-content-between align-items-center mb-4">
         <h2><i class="fas fa-clipboard-list me-2"></i>Dashboard do Cuidador</h2>
         <button class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#logoutModal">
@@ -22,7 +23,7 @@
         </button>
       </div>
 
-      <!-- Medicamentos -->
+      <!-- medicamentos -->
       <div class="card p-4 mb-4">
         <h4 class="mb-3"><i class="fas fa-capsules me-2 text-danger"></i>Medicamentos</h4>
         <form id="medication-form" class="mb-3">
@@ -37,7 +38,8 @@
         <div id="lista-meds-container"></div>
       </div>
 
-      <!-- Associação -->
+
+      
       <div class="card p-4 mb-4">
         <h4 class="mb-3">🔗 Associar Paciente</h4>
         <input type="text" id="pacienteId" placeholder="ID do paciente" class="form-control mb-2" />
@@ -45,7 +47,7 @@
         <div id="associar-status" class="mt-2 text-info"></div>
       </div>
 
-      <!-- Pacientes -->
+      <!-- pacientes -->
       <div class="card p-4 mb-4">
         <h4 class="mb-3">👥 Pacientes Associados</h4>
         <div id="pacientes-container"></div>
@@ -54,7 +56,7 @@
     </div>
   </div>
 
-  <!-- Modal de Confirmação de Logout -->
+  <!-- modal logout -->
   <div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
@@ -73,7 +75,7 @@
     </div>
   </div>
 
-  <!-- Scripts -->
+  <!-- scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="./js/admin-dashboard.js"></script>
   <script type="module">
