--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MediGest – Perfil</title>
 
-  <!-- Bootstrap & Font Awesome -->
+  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
@@ -20,13 +20,13 @@
         </button>
       </div>
 
-      <!-- Foto de perfil -->
+      
       <div class="text-center mb-4">
         <img id="avatar-preview" src="https://via.placeholder.com/120" class="rounded-circle border mb-2" width="120" height="120" alt="Avatar">
         <input type="file" id="avatar-input" accept="image/*" capture="user" class="form-control mt-2" />
       </div>
 
-      <!-- Info do perfil -->
+      
       <div id="profile-info">
         <div class="mb-3">
           <label class="form-label"><strong>Email:</strong></label>
@@ -56,7 +56,7 @@
     </div>
   </div>
 
-  <!-- Modal de Logout -->
+  <!-- logout -->
   <div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
@@ -75,7 +75,7 @@
     </div>
   </div>
 
-  <!-- JS -->
+  <!-- scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module">
     import { supabase } from './js/supabaseClient.js'
