--- a/admin-paciente.html
+++ b/admin-paciente.html
@@ -1,4 +1,3 @@
-<!-- admin-paciente.html -->
 <!DOCTYPE html>
 <html lang="pt">
 <head>
@@ -7,7 +6,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      background-color: #e8f5e9; /* verde claro */
+      background-color: #e8f5e9; 
       font-family: 'Segoe UI', sans-serif;
     }
     .card {
@@ -24,6 +23,11 @@
   <h4 class="text-secondary mb-3">Prescrever Medicamentos</h4>
   <div id="prescricao-container" class="mb-5">
     <p class="text-muted">A carregar medicamentos...</p>
+  </div>
+
+  <h4 class="text-secondary mb-3">Histórico de Confirmações</h4>
+  <div id="historico-container" class="mb-5">
+    <p class="text-muted">A carregar histórico...</p>
   </div>
 
   <a href="admin-dashboard.html" class="btn btn-outline-success">← Voltar ao Painel do Admin</a>
